# psp-tool

./: .gitignore  CMakeLists.txt  README.md
PSP/: CMakeLists.txt  dialog_auto_sort_makers.cpp  dialog_auto_sort_makers.h  dialog_auto_sort_makers.ui  dlg_op_marker_add_size.cpp  dlg_op_marker_add_size.h  dlg_op_marker_add_size.ui  dlg_paint_cali_save_param.cpp  dlg_paint_cali_save_param.h  dlg_paint_cali_save_param.ui  logic_roi_io.cpp  logic_roi_io.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_test.cpp  manageproject.cpp  manageproject.h  manageproject.ui  page_edit_filter.cpp  page_edit_filter.h  page_edit_filter.ui  page_frequency.cpp  page_frequency.h  page_frequency.ui  page_histogram.cpp  page_histogram.h  page_histogram.ui  page_image_alignment.cpp  page_image_alignment.h  page_image_alignment.ui  page_paint_calibration.cpp  page_paint_calibration.h  page_paint_calibration.ui  page_paint_calibration_data_collection.cpp  page_paint_calibration_data_collection.h  page_paint_calibration_data_collection.ui  page_paint_calibration_new_project.cpp  page_paint_calibration_new_project.h  (+42 more)
PSP/js/: PageImageAlignment.js  PagePaintCalibration.js  PageTwoImageCalculation.js
PSP/qml/: ControlButton.qml  ControlInput.qml  ControlText.qml  PageImageAlignment.qml  PagePaintCalibration.qml  PagePaintCalibrationDataFromDisk.qml  PageProjectNew.qml  PageTwoImageCalculation.qml
PSP/res-icon/: clear_iccp.sh
PSP/res-lang/: lang-traslation  lang_en_US.qm  lang_en_US.ts  lang_zh_CN.qm  lang_zh_CN.ts
algo/: CMakeLists.txt  algo.cpp  algo_2d_features.cpp  algo_basic_arithmatic.cpp  algo_enhancement.cpp  algo_filter.cpp  algo_marker_detector.cpp  algo_marker_fill.cpp  algo_match.cpp  algo_solve.cpp  algo_threshold.cpp  algo_transformation.cpp  algo_type.cpp
base/: CMakeLists.txt  base_arithmatic.cpp  base_def.cpp  base_graphic.cpp  base_graphic_colorbar.cpp  base_graphic_line.cpp  base_graphic_manager.cpp  base_graphic_polygon.cpp  base_graphic_rect.cpp  base_graphic_text.cpp  base_log.cpp  base_markerpoint.cpp  base_markerpoint_sort.cpp  base_sort_points.cpp  base_system_param.cpp
cmake/: common.cmake
include/algo/: algo.h  algo_2d_features.h  algo_basic_arithmatic.h  algo_enhancement.h  algo_filter.h  algo_global.h  algo_marker_detector.h  algo_marker_fill.h  algo_match.h  algo_solve.h  algo_threshold.h  algo_transformation.h  algo_type.h
include/base/: base_arithmatic.h  base_def.h  base_global.h  base_graphic.h  base_graphic_colorbar.h  base_graphic_line.h  base_graphic_manager.h  base_graphic_polygon.h  base_graphic_rect.h  base_graphic_text.h  base_log.h  base_markerpoint.h  base_markerpoint_sort.h  base_sort_points.h  base_system_param.h  base_trace.h
include/io/: io.h  io_global.h
include/manager/: manager.h  manager_doc.h  manager_doc_paint_calibration.h  manager_doc_single_component.h  manager_doc_two_component.h  manager_global.h  work_manager.h
include/op/: op_base.h  op_factory.h  op_general.h  op_global.h  op_length_measure.h  op_manager.h  op_marker_pin.h  op_marker_translate.h  op_markeradd.h  op_markerdelete.h  op_menu.h  op_paint_calibration_range.h  op_parameter.h  op_roi_add.h  op_sectional_view.h  op_type.h  op_undo_redo.h  op_undo_redo_markeradd.h  op_undo_redo_stack.h
include/xml/: xml_global.h  xml_read_marker.h  xml_write_marker.h
io/: CMakeLists.txt  io.cpp
manager/: CMakeLists.txt  manager.cpp  manager_doc.cpp  manager_doc_paint_calibration.cpp  manager_doc_single_component.cpp  manager_doc_two_component.cpp  work_manager.cpp
op/: CMakeLists.txt  op_factory.cpp  op_general.cpp  op_length_measure.cpp  op_manager.cpp  op_marker_pin.cpp  op_marker_translate.cpp  op_markeradd.cpp  op_markerdelete.cpp  op_paint_calibration_range.cpp  op_roi_add.cpp  op_sectional_view.cpp  op_undo_redo_markeradd.cpp  op_undo_redo_stack.cpp
xml/: xml_read_marker.cpp  xml_write_marker.cpp
